# diorama

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
diorama/core/: __init__.py  answer.py  callback.py  demo_tools.py  prompts.py  react.py  router.py  tool.py
diorama/ebook/: __init__.py  context.py  ebook_loader_agent.py  models.py  prompts.py  slicer.py  tools.py
diorama/models/: __init__.py  litellm_model.py  pricing.py  prompt_cache.py
docs/: README.md  callback-architecture.md  callback-implementation-guide.md  ebook-loader-agent.md  react-agent-callbacks.md
tests/: test_callbacks.py  test_ebook_loader.py  test_react_agent.py
