[project]
name = "diorama"
version = "0.0.1"
description = "Ebook reader for the 21st century"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ebooklib>=0.20",
    "html2text>=2025.4.15",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.9",
    "python-dotenv>=1.2.2",
    "thefuzz>=0.22.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.16",
    "pillow>=11",
    "tenacity>=9.1.4",
    "python-multipart>=0.0.9",
    "rich>=14.3.3",
    "typer>=0.12",
    "litellm>=1.90.0",
    "weave>=0.52.43",
    "llm-sandbox[docker]>=0.3.39",
]

[dependency-groups]
dev = [
    "uv>=0.4.20",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.21",
    "greenlet>=3.0.0",
    "isort>=5.13.2",
    "black>=24.10.0",
    "ruff>=0.6.9",
    "textual-dev>=1.7.0",
    "openai>=1.108.2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-material>=9.5.39",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-jupyter>=0.25.0",
    "mkdocs-panzoom-plugin",
    "jupyter>=1.1.1",
]
build = [
    "twine>=5.1.1",
    "wheel>=0.40",
    "build>=0.10",
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["diorama"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["I", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["diorama"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
